@@ -683,6 +683,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 5161) Don't try to load template list for nonexistent pages
 * (bug 5228) Workaround for broken LanguageConverter title overrides; avoid
   unnecessary hidden UI work when watch/unwatch is performed on edit
+* Fixed bogus master fallback in external storage
 
 
 === Caveats ===
